<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_height="350dp"
    android:layout_gravity="center"
    android:background="@drawable/ic_launcher_background"
    android:backgroundTint="@color/nighty_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/DeleteWarningLabel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/ic_launcher_background"
            android:backgroundTint="@color/delete_adv_secondary_background"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/warning_title"
            android:textColor="@color/delete_adv_main_title"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/DeleteWarningIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DeleteWarningLabel"
            app:srcCompat="@drawable/sddeletionadv"
            app:tint="@color/delete_adv_logo" />

        <TextView
            android:id="@+id/DeleteWaringSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_adv_subtitle"
            android:textColor="@color/delete_adv_subtitle"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/DeleteWarningDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/DeleteWarningIcon" />

        <TextView
            android:id="@+id/DeleteWarningDescription"
            android:layout_width="347dp"
            android:layout_height="47dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/delete_adv_content_description"
            android:textColor="@color/delete_adv_description"
            android:textColorHint="@color/delete_adv_description"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:backgroundTint="#00FFFFFF"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.52"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/AcceptDeleteWarning"
                android:layout_width="130dp"
                android:layout_height="55dp"
                android:background="@drawable/ic_launcher_background"
                android:backgroundTint="@color/nighty_background"
                android:fontFamily="sans-serif-medium"
                android:text="@string/accept"
                android:textColor="@color/delete_adv_accept"
                android:textSize="20sp" />

            <Space
                android:layout_width="18dp"
                android:layout_height="wrap_content"
                android:layout_weight="0" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/DeclineDeleteWarning"
                android:layout_width="130dp"
                android:layout_height="55dp"
                android:layout_weight="0"
                android:background="@drawable/ic_launcher_background"
                android:backgroundTint="@color/nighty_background"
                android:fontFamily="sans-serif-medium"
                android:text="@string/decline"
                android:textColor="@color/delete_adv_reject"
                android:textSize="20sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>