<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="350dp"
    android:layout_gravity="center"
    android:background="@drawable/ic_launcher_background"
    android:backgroundTint="@color/nighty_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/AsignGroupToHashtagsLabel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_launcher_background"
            android:backgroundTint="@color/secondary_background"
            android:fontFamily="sans-serif-medium"
            android:text="@string/asign_group"
            android:textAlignment="center"
            android:textColor="@color/dialog_main_title"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TableRow
            android:layout_width="355dp"
            android:layout_height="50dp"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/in_general"
                android:textColor="@color/hashtags_query_text"
                android:textSize="20sp" />

            <Space
                android:layout_width="125dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/in_group"
                android:textColor="@color/hashtags_query"
                android:textSize="20sp" />
        </TableRow>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/SetHashtagsToGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AsignGroupToHashtagsLabel"
            app:layout_constraintVertical_bias="0.52">

            <ScrollView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:padding="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/NoAssignedHashtags"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </com.google.android.material.chip.ChipGroup>
                </RelativeLayout>
            </ScrollView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="60dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageButton
                        android:id="@+id/GeneralToGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00FFFFFF"
                        app:srcCompat="@drawable/addtogroup"
                        app:tint="@color/hashtags_query"
                        tools:ignore="SpeakableTextPresentCheck" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="30dp" />

                    <ImageButton
                        android:id="@+id/GroupToGeneral"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00FFFFFF"
                        app:srcCompat="@drawable/addtogeneral"
                        app:tint="@color/hashtags_query_text"
                        tools:ignore="SpeakableTextPresentCheck"
                        android:contentDescription="TODO" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ScrollView
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:padding="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/AssignedHashtags"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </com.google.android.material.chip.ChipGroup>
                </RelativeLayout>
            </ScrollView>

        </LinearLayout>

        <ImageButton
            android:id="@+id/SetHashtagsToGroup"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#00FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/AsignGroupToHashtagsLabel"
            app:layout_constraintVertical_bias="0.93"
            app:srcCompat="@android:drawable/ic_menu_save"
            app:tint="@color/hint_blue"
            tools:ignore="SpeakableTextPresentCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>